--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,10 @@
   ],
   "dependencies": {
     "ng-file-upload-shim": "^12.0.4",
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "angular-resource": "^1.5.5",
+    "angular": "^1.5.5",
+    "angular-ui-router": "^0.2.18",
+    "angular-animate": "^1.5.5"
   }
 }
