--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "multiparty": "^4.1.2",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
