--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-resource": "^1.5.5",
     "angular": "^1.5.5",
     "angular-ui-router": "^0.2.18",
-    "angular-animate": "^1.5.5"
+    "angular-animate": "^1.5.5",
+    "angular-bootstrap-slider": "^0.1.27"
   }
 }
