--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "imagemagick": "^0.1.3",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "multiparty": "^4.1.2",
