Colormap in imagemagick working very bed there for I did: convert palette of string in rgb format and save in json change number of color in image using -colors comand in imagemagick. User can change number of color get all color in image. find in palette the most similar color and replace it.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ bower_components
 server/public/images/temp
 server/public/images/resize
 server/public/images/color
+server/public/images/changeColor
+server/public/images/convert
