--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.1",
     "imagemagick": "^0.1.3",
     "jade": "~1.11.0",
+    "jsonfile": "^2.3.1",
     "morgan": "~1.6.1",
     "multiparty": "^4.1.2",
     "serve-favicon": "~2.3.0"
