--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ server/public/images/color
 server/public/images/changeColor
 server/public/images/convert
 server/public/images/temp_convert
+server/public/lib
