--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./server/bin/www"
   },
   "dependencies": {
+    "assert": "^1.4.0",
     "body-parser": "~1.13.2",
     "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.5",
@@ -15,8 +16,15 @@
     "imagemagick": "^0.1.3",
     "jade": "~1.11.0",
     "jsonfile": "^2.3.1",
-    "morgan": "~1.6.1",
+    "jsonwebtoken": "^7.0.0",
+    "mongodb": "^2.1.20",
+    "mongoose": "^4.4.19",
+    "morgan": "^1.6.1",
     "multiparty": "^4.1.2",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
