--- a/bower.json
+++ b/bower.json
@@ -19,13 +19,13 @@
     "tests"
   ],
   "dependencies": {
-    "ng-file-upload-shim": "^12.0.4",
-    "ng-file-upload": "^12.0.4",
     "angular-resource": "^1.5.5",
     "angular": "^1.5.5",
     "angular-ui-router": "^0.2.18",
     "angular-animate": "^1.5.5",
-    "angular-bootstrap-slider": "^0.1.27",
-    "angular-material": "^1.0.8"
+    "angular-material": "^1.0.8",
+    "ng-file-upload-shim": "^12.0.4",
+    "ng-file-upload": "^12.0.4",
+    "angular-cookies": "^1.5.6"
   }
 }
