--- a/Ionic/EP/bower.json
+++ b/Ionic/EP/bower.json
@@ -9,7 +9,8 @@
     "angular-material": "^1.0.8",
     "ng-file-upload-shim": "^12.0.4",
     "ng-file-upload": "^12.0.4",
-    "angular-cookies": "^1.5.6"
+    "angular-cookies": "^1.5.6",
+    "ngCordova": "^0.1.26-alpha"
   },
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1"
