--- a/Ionic/EP/package.json
+++ b/Ionic/EP/package.json
@@ -34,5 +34,8 @@
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "ios",
+    "android"
+  ]
 }
